--- a/AI-rules.yaml
+++ b/AI-rules.yaml
@@ -23,23 +23,37 @@ payload:
   # -----------------------------
   # Gemini (Google AI) 流量
   # -----------------------------
+  - DOMAIN-SUFFIX,lh5.googleusercontent.com,no-resolve
+  - DOMAIN-SUFFIX,www.googleapis.com,no-resolve
+  - DOMAIN-SUFFIX,ssl.gstatic.com,no-resolve
+  - DOMAIN-SUFFIX,fonts.googleapis.com,no-resolve
+  - DOMAIN-SUFFIX,play.google.com,no-resolve
+  - DOMAIN-SUFFIX,ogs.google.com,no-resolve
+  - DOMAIN-SUFFIX,apis.google.com,no-resolve
+  - DOMAIN-SUFFIX,jnn-pa.googleapis.com,no-resolve
+  - DOMAIN-SUFFIX,waa-pa.clients6.google.com,no-resolve
+  - DOMAIN-SUFFIX,yt3.ggpht.com,no-resolve
+  - DOMAIN-SUFFIX,lh3.googleusercontent.com,no-resolve
+  - DOMAIN-SUFFIX,maps.gstatic.com,no-resolve
+  - DOMAIN-SUFFIX,lh3.google.com,no-resolve
+  - DOMAIN-SUFFIX,ogads-pa.clients6.google.com,no-resolve
+  - DOMAIN-SUFFIX,csp.withgoogle.com,no-resolve
+  - DOMAIN-SUFFIX,www.googletagmanager.com,no-resolve
+  - DOMAIN-SUFFIX,fonts.gstatic.com,no-resolve
+  - DOMAIN-SUFFIX,maps.googleapis.com,no-resolve
+  - DOMAIN-SUFFIX,static.doubleclick.net,no-resolve
+  - DOMAIN-SUFFIX,www.gstatic.com,no-resolve
   - DOMAIN-SUFFIX,gemini.google.com,no-resolve
-  - DOMAIN-SUFFIX,generativelanguage.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,bard.google.com,no-resolve
-  - DOMAIN-SUFFIX,ai.google.dev,no-resolve
-  - DOMAIN-SUFFIX,aistudio.google.com,no-resolve
-  - DOMAIN-SUFFIX,play.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,oauth2.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,oauthaccountmanager.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,proactivebackend-pa.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,notifications-pa.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,recordinguploader-pa.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,assistantembedded.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,speech.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,stt.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,tts.googleapis.com,no-resolve
-  - DOMAIN-KEYWORD,generativelanguage,no-resolve      # 智能捕获未来 Generative Language API 子域
-  - DOMAIN-KEYWORD,bard,no-resolve                    # 智能捕获未来 Bard 子域
+  - DOMAIN-SUFFIX,td.doubleclick.net,no-resolve
+  - DOMAIN-SUFFIX,googleads.g.doubleclick.net,no-resolve
+  - DOMAIN-SUFFIX,www.google-analytics.com,no-resolve
+  - DOMAIN-SUFFIX,optimizationguide-pa.googleapis.com,no-resolve
+  - DOMAIN-SUFFIX,encrypted-tbn0.gstatic.com,no-resolve
+  - DOMAIN-SUFFIX,encrypted-tbn1.gstatic.com,no-resolve
+  - DOMAIN-SUFFIX,encrypted-tbn2.gstatic.com,no-resolve
+  - DOMAIN-SUFFIX,encrypted-tbn3.gstatic.com,no-resolve
+  - DOMAIN-SUFFIX,streetviewpixels-pa.googleapis.com,no-resolve
+  - DOMAIN-SUFFIX,content-autofill.googleapis.com,no-resolve
   - DOMAIN-KEYWORD,gemini,no-resolve               # 智能捕获未来 Google AI 子域
 
   # -----------------------------
