--- a/AI-rules.yaml
+++ b/AI-rules.yaml
@@ -24,17 +24,17 @@ payload:
   # Gemini (Google AI) 流量
   # -----------------------------
   - DOMAIN-SUFFIX,gemini.google.com,no-resolve
-  - DOMAIN-SUFFIX,generativelanguage.googleapis.com,no-resolve  # 免费 API
-  - DOMAIN-SUFFIX,aiplatform.googleapis.com,no-resolve         # Vertex AI
-  - DOMAIN-SUFFIX,clients6.google.com,no-resolve               # waa-pa / ogads-pa / jnn-pa
-  - DOMAIN-SUFFIX,jnn-pa.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,ogs.google.com,no-resolve
-  - DOMAIN-SUFFIX,optimizationguide-pa.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,csp.withgoogle.com,no-resolve
-  - DOMAIN-SUFFIX,content-autofill.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,cloudaicompanion.googleapis.com,no-resolve
-  - DOMAIN-SUFFIX,www.googleapis.com,no-resolve                # 核心 API
-  - DOMAIN-SUFFIX,apis.google.com,no-resolve
+  - DOMAIN-SUFFIX,generativelanguage.googleapis.com,no-resolve          # 免费 API 端点
+  - DOMAIN-SUFFIX,aiplatform.googleapis.com,no-resolve                  # Vertex AI 端点
+  - DOMAIN-SUFFIX,www.googleapis.com,no-resolve                         # 核心 API 入口
+  - DOMAIN-SUFFIX,apis.google.com,no-resolve                            # API 通信
+  - DOMAIN-SUFFIX,jnn-pa.googleapis.com,no-resolve                      # AI 通知服务
+  - DOMAIN-SUFFIX,waa-pa.clients6.google.com,no-resolve                 # Web 应用加速（必需）
+  - DOMAIN-SUFFIX,csp.withgoogle.com,no-resolve                         # 内容安全策略
+  - DOMAIN-SUFFIX,optimizationguide-pa.googleapis.com,no-resolve        # 优化指南
+  - DOMAIN-SUFFIX,content-autofill.googleapis.com,no-resolve            # 自动填充
+  - DOMAIN-SUFFIX,ogs.google.com,no-resolve                             # 搜索 grounding 支持
+  - DOMAIN-SUFFIX,cloudaicompanion.googleapis.com,no-resolve            # 云 AI 伴侣（部分功能）
   - DOMAIN-KEYWORD,gemini,no-resolve               # 智能捕获未来 Google AI 子域
 
   # -----------------------------
