--- a/Mihomo.yaml
+++ b/Mihomo.yaml
@@ -93,16 +93,13 @@ rules:
 
 dns:
   enable: true
-  ipv6: false
-  listen: 0.0.0.0:53
+  ipv6: true # <--- 修正：开启 DNS 的 IPv6 解析
+  enhanced-mode: fake-ip
+  fake-ip-range: 198.18.0.1/16
   default-nameserver:
-    - 114.114.115.115
-    - 119.28.28.28
-    - 223.6.6.6
+    - 223.5.5.5
+    - 114.114.114.114
   nameserver:
-    - https://223.5.5.5/dns-query
-    - https://223.6.6.6/dns-query
-    - https://1.12.12.12/dns-query
-    - https://120.53.53.53/dns-query
-  fallback-filter:
-    geoip: false
+    - https://dns.alidns.com/dns-query
+    - https://doh.pub/dns-query
+
